...
      'Рад видеть тебя снова',
      '很高兴再次见到你',
      'また会えて嬉しいですね',
      'سررت برؤيتك مرة أخرى',
    ];
    return Container(
      key: ValueKey('welcomeScreen'),
      color: Colors.white ,
      width: context.width,
      child: Stack(
        children: [
          ResponsiveBuilder(
            builder:
...
                            children: [
                              Expanded(
                                child: MouseRegion(
                                  
                                  cursor: SystemMouseCursors.click,
                                  child: GestureDetector(
                                    key: const ValueKey('loginButton'),
                                    behavior: HitTestBehavior.translucent,
                                    onTap: () {

                                      context.go(LoginScreen.path);

                                    },
...
