...
  @override
  Widget build(BuildContext context,ref) {

    final authData = ref.watch(authProvider);

    return Title(
      key: ValueKey("authLogin"),
      color: Colors.red,
      title: "Iniciar sesión",
      child: Container(
        color: Colors.white,
        child: SingleChildScrollView(
          child: Column(
...
